@@ -1129,7 +1129,7 @@
 2422,8,6,2,0,0x3,5:6:7:8:9,5,1,yes,0,0,0,misc,0,		WM_LULLABY_DEEPSLEEP,Deep Sleep Lullaby
 2423,0,6,4,0,0x3,-1,5,1,no,0,0,0,none,0,		WM_SIRCLEOFNATURE,Circle of Nature's Sound
 2424,0,6,4,0,0x1,0,5,1,yes,0,0,0,magic,0,		WM_RANDOMIZESPELL,Improvised Song
-2425,5,6,1,0,0,0,5,1,yes,0,0,0,none,0,		WM_GLOOMYDAY,Gloomy Day
+2425,5,6,1,0,0x1,0,5,1,yes,0,0,0,none,0,		WM_GLOOMYDAY,Gloomy Day
 2426,9,6,2,-1,0x2,2:3:3:4:4,5,1,no,0,0x2000,0,weapon,0,		WM_GREAT_ECHO,Great Echo
 2427,0,6,4,0,0x3,-1,5,0,no,0,0x2000,0,none,0,		WM_SONG_OF_MANA,Song of Mana
 2428,0,6,4,0,0x3,-1,5,1,no,0,0x2000,0,none,0,		WM_DANCE_WITH_WUG,Dance With A Warg
@@ -1191,7 +1191,7 @@
 2489,9,6,2,0,0,0,1,1,yes,0,0,0,weapon,0,	GN_FIRE_EXPANSION_ACID,Fire Expansion Acid
 2490,9,6,2,0,0,0,5,1,yes,0,0,2:3:4:5:6,none,0,	GN_HELLS_PLANT,Hell's Plant
 2491,0,6,1,0,0,0,5,1,no,0,0,0,weapon,0,		GN_HELLS_PLANT_ATK,Hell's Plant Attack
-2492,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		GN_MANDRAGORA,Howling of Mandragora
+2492,0,6,4,0,0x3,9,5,0,yes,0,0,0,none,0,		GN_MANDRAGORA,Howling of Mandragora
 2493,0,0,0,0,0,0,1,0,no,0,0,0,none,0,		GN_SLINGITEM,Sling Item
 2494,0,0,0,0,0,0,1,0,no,0,0,0,none,0,		GN_CHANGEMATERIAL,Change Material
 2495,0,6,4,0,0x1,0,2,0,no,0,0,0,none,0,		GN_MIX_COOKING,Mix Cooking
